--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:lib": "ng build angular-canvas-lib --prod",
+    "build:lib": "ng build angular-canvas-lib",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
